syntax = "proto3";

option go_package = "github.com/apache/apisix";

import "base.proto";
import "validate/validate.proto";
import "google/protobuf/any.proto";

// Plugins contains enabled plugins in Route
message Plugins {
  // Note: we need to use protojson to make json_name works
  TrafficSplit traffic_split = 1 [json_name="traffic-split"];;
}

// TrafficSplit is traffic-split plugin.
// See https://github.com/apache/apisix/blob/master/docs/en/latest/plugins/traffic-split.md
message TrafficSplit {
  repeated TrafficSplitRule rules = 1;
}

message TrafficSplitRule {
  repeated TrafficSplitMatch match = 1;
  repeated TrafficSplitWeightedUpstreams weighted_upstreams = 2;
}

message TrafficSplitMatch {
  repeated Var vars = 1;
}

message TrafficSplitWeightedUpstreams {
  string upstream_id = 1;
  uint32 weight = 2;
}
